--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 Animation/Unreal[[:space:]]Project filter=lfs diff=lfs merge=lfs -text
+*.uasset filter=lfs diff=lfs merge=lfs -text
